[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["ehab-ahma <ehab24495@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
